// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> should display toast message in case of an error when fetching app details 1`] = `
<main>
  <article
    class="layout"
  >
    <nav
      class="site-header"
    >
      <a
        class=""
        href="/"
      >
        <h2>
          Global.appName
        </h2>
      </a>
      <div
        class="site-header__search css-b62m3t-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-7-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class=" css-1s2u09g-control"
        >
          <div
            class=" css-319lph-ValueContainer"
          >
            <div
              class=" css-14el2xx-placeholder"
              id="react-select-7-placeholder"
            >
              Search
            </div>
            <div
              class=" css-6j8wv5-Input"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-controls="react-select-7-listbox"
                aria-describedby="react-select-7-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                aria-owns="react-select-7-listbox"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class=""
                id="react-select-7-input"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class=" css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class=" css-1okebmr-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class=" css-tlfecz-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <section
      class="layout__screens"
    >
      <article
        class="app-detail"
      >
        <button>
          <img
            alt="left-arrow"
            src="assets/images/arrow-left.svg"
          />
          AppDetail.backButton
        </button>
      </article>
    </section>
  </article>
  <div
    class="Toastify"
  />
</main>
`;

exports[`<App /> should display toast message in case of an error when fetching readme 1`] = `
<main>
  <article
    class="layout"
  >
    <nav
      class="site-header"
    >
      <a
        class=""
        href="/"
      >
        <h2>
          Global.appName
        </h2>
      </a>
      <div
        class="site-header__search css-b62m3t-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-5-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class=" css-1s2u09g-control"
        >
          <div
            class=" css-319lph-ValueContainer"
          >
            <div
              class=" css-14el2xx-placeholder"
              id="react-select-5-placeholder"
            >
              Search
            </div>
            <div
              class=" css-6j8wv5-Input"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-controls="react-select-5-listbox"
                aria-describedby="react-select-5-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                aria-owns="react-select-5-listbox"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class=""
                id="react-select-5-input"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class=" css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class=" css-1okebmr-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class=" css-tlfecz-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <section
      class="layout__screens"
    >
      <article
        class="app-detail"
      >
        <button>
          <img
            alt="left-arrow"
            src="assets/images/arrow-left.svg"
          />
          AppDetail.backButton
        </button>
        <section>
          <h2>
            prometheus-operator-app-chart
          </h2>
          <img
            alt="https://raw.githubusercontent.com/prometheus/prometheus.github.io/master/assets/prometheus_logo-cb55bb5c346.png"
            class="icon"
            src="https://raw.githubusercontent.com/prometheus/prometheus.github.io/master/assets/prometheus_logo-cb55bb5c346.png"
          />
          <div
            class="info"
          >
            <div>
              <h4>
                AppDetail.details.id
              </h4>
               
              <p>
                asdm123312asdnboqwedsa
              </p>
            </div>
            <div>
              <h4>
                AppDetail.details.version
              </h4>
               
              <p>
                0.2.0
              </p>
            </div>
            <div>
              <h4>
                AppDetail.details.description
              </h4>
               
              <p>
                A Helm Chart for Prometheus Operator.
              </p>
            </div>
            <div>
              <h4>
                AppDetail.details.author
              </h4>
               
              <p>
                Giantswarm
              </p>
            </div>
            <div>
              <h4>
                AppDetail.details.url
              </h4>
              <a
                href="https://github.com/giantswarm/prometheus-operator-app"
                rel="noreferrer"
                target="_blank"
              >
                https://github.com/giantswarm/prometheus-operator-app
              </a>
            </div>
          </div>
        </section>
        <section
          class="readme"
        >
          <h4>
            AppDetail.details.readme
          </h4>
        </section>
      </article>
    </section>
  </article>
  <div
    class="Toastify"
  >
    <div
      class="Toastify__toast-container Toastify__toast-container--bottom-right"
    >
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--error Toastify--animate Toastify__bounce-enter--bottom-right"
        id="41zgm7ppi"
      >
        <div
          class="Toastify__toast-body"
          role="alert"
        >
          <div
            class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
          >
            <svg
              fill="var(--toastify-icon-color-error)"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
            >
              <path
                d="M11.983 0a12.206 12.206 0 00-8.51 3.653A11.8 11.8 0 000 12.207 11.779 11.779 0 0011.8 24h.214A12.111 12.111 0 0024 11.791 11.766 11.766 0 0011.983 0zM10.5 16.542a1.476 1.476 0 011.449-1.53h.027a1.527 1.527 0 011.523 1.47 1.475 1.475 0 01-1.449 1.53h-.027a1.529 1.529 0 01-1.523-1.47zM11 12.5v-6a1 1 0 012 0v6a1 1 0 11-2 0z"
              />
            </svg>
          </div>
          <div>
            AppDetail.error.readme
          </div>
        </div>
        <button
          aria-label="close"
          class="Toastify__close-button Toastify__close-button--light"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 14 16"
          >
            <path
              d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <div
          aria-hidden="false"
          aria-label="notification timer"
          class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--error"
          role="progressbar"
          style="animation-duration: 5000ms; animation-play-state: paused; opacity: 1;"
        />
      </div>
    </div>
  </div>
</main>
`;

exports[`<App /> should render app detail based on url param and navigate back to app liston clicking back button 1`] = `
<main>
  <article
    class="layout"
  >
    <nav
      class="site-header"
    >
      <a
        class=""
        href="/"
      >
        <h2>
          Global.appName
        </h2>
      </a>
      <div
        class="site-header__search css-b62m3t-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-2-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class=" css-1s2u09g-control"
        >
          <div
            class=" css-319lph-ValueContainer"
          >
            <div
              class=" css-14el2xx-placeholder"
              id="react-select-2-placeholder"
            >
              Search
            </div>
            <div
              class=" css-6j8wv5-Input"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-controls="react-select-2-listbox"
                aria-describedby="react-select-2-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                aria-owns="react-select-2-listbox"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class=""
                id="react-select-2-input"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class=" css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class=" css-1okebmr-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class=" css-tlfecz-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <section
      class="layout__screens"
    >
      <article
        class="app-detail"
      >
        <button>
          <img
            alt="left-arrow"
            src="assets/images/arrow-left.svg"
          />
          AppDetail.backButton
        </button>
        <section>
          <h2>
            prometheus-operator-app-chart
          </h2>
          <img
            alt="https://raw.githubusercontent.com/prometheus/prometheus.github.io/master/assets/prometheus_logo-cb55bb5c346.png"
            class="icon"
            src="https://raw.githubusercontent.com/prometheus/prometheus.github.io/master/assets/prometheus_logo-cb55bb5c346.png"
          />
          <div
            class="info"
          >
            <div>
              <h4>
                AppDetail.details.id
              </h4>
               
              <p>
                asdm123312asdnboqwedsa
              </p>
            </div>
            <div>
              <h4>
                AppDetail.details.version
              </h4>
               
              <p>
                0.2.0
              </p>
            </div>
            <div>
              <h4>
                AppDetail.details.description
              </h4>
               
              <p>
                A Helm Chart for Prometheus Operator.
              </p>
            </div>
            <div>
              <h4>
                AppDetail.details.author
              </h4>
               
              <p>
                Giantswarm
              </p>
            </div>
            <div>
              <h4>
                AppDetail.details.url
              </h4>
              <a
                href="https://github.com/giantswarm/prometheus-operator-app"
                rel="noreferrer"
                target="_blank"
              >
                https://github.com/giantswarm/prometheus-operator-app
              </a>
            </div>
          </div>
        </section>
        <section
          class="readme"
        >
          <h4>
            AppDetail.details.readme
          </h4>
          <p>
            mock-read-me
          </p>
        </section>
      </article>
    </section>
  </article>
  <div
    class="Toastify"
  />
</main>
`;
